Add needed files and controllers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
 <head>
   <title>Myrubyblog</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', debug: true %>
+  <%= javascript_include_tag 'app-bundle', debug: true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
